<resources>
    <string name="app_name">FamilyMap</string>
    <!--login labels-->
    <string name="host_label">Server Host:</string>
    <string name="port_label">Server Port:</string>
    <string name="user_name_label">User Name:</string>
    <string name="password_label">Password:</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="email_label">Email:</string>
    <string name="gender_label">Gender:</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="register_button">REGISTER</string>
    <!--login hints-->
    <string name="host_hint"> server hostname</string>
    <string name="port_hint">server port</string>
    <string name="user_name_hint">user name</string>
    <string name="password_hint">password</string>
    <string name="first_name_hint">first name</string>
    <string name="last_name_hint">last name</string>
    <string name="email_hint">email</string>
    <string name="male_hint">Male:</string>
    <string name="female_hint">Female:</string>
    <string name="default_marker">Click on a marker</string>
    <string name="default_marker_details">to see event details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_person">PersonActivity</string>

    <string-array name="colorOptions">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>White</item>
    </string-array>

    <string-array name="mapTypeOptions">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>None</item>
    </string-array>

</resources>
